<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PermissionsActivity">


    <TextView
        android:id="@+id/register_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/permissions_screen_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_bluetooth"
        android:layout_width="82dp"
        android:layout_height="88dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/switch_bluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_screen_title"
        app:srcCompat="@drawable/ic_bluetooth" />

    <Switch
        android:id="@+id/switch_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:checked="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_bluetooth" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/switch_location_services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bluetooth"
        app:srcCompat="@drawable/ic_location" />

    <Switch
        android:id="@+id/switch_location_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:checked="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_location" />

    <TextView
        android:id="@+id/error_permissions_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/msg_permissions_screen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_location" />

    <Button
        android:id="@+id/continue_button"
        android:theme="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/error_permissions_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>